--- a/infrastructure/docker/compose.yml
+++ b/infrastructure/docker/compose.yml
@@ -1,6 +1,19 @@
 version: '3.9'
 
 services:
+  minio:
+    image: minio/minio:latest
+    container_name: agent-platform-minio
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio_data:/data
+
+
   postgres:
     image: pgvector/pgvector:pg17
     container_name: agent-platform-postgres
@@ -27,3 +40,4 @@ services:
 volumes:
   postgres_data:
   redis_data:
+  minio_data:
