--- a/services/aihub/.env.example
+++ b/services/aihub/.env.example
@@ -1,3 +1,5 @@
-DATABASE_URL=
+REDIS_URL=redis://default:@localhost:6379/0
+POSTGRES_URL=postgresql://postgres:postgres@localhost:5432/agent_studio
 
-LOG_LEVEL=
+PORT=8000
+LOG_LEVEL=INFO
