--- a/services/aihub/pyproject.toml
+++ b/services/aihub/pyproject.toml
@@ -5,21 +5,15 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "alembic>=1.18.1",
-    "asyncpg>=0.31.0",
+    "common",
     "fastapi>=0.128.0",
-    "sqlalchemy>=2.0.46",
-]
-
-[dependency-groups]
-dev = [
-    "pytest>=9.0.2",
-    "pytest-asyncio>=1.3.0",
-    "ruff>=0.14.14",
+    "pydantic-settings>=2.12.0",
+    "sentence-transformers>=5.2.2",
+    "uvicorn>=0.40.0",
 ]
 
 [tool.uv.sources]
-torch = { index = "pytorch" }
+common = { workspace = true }
 
 [[tool.uv.index]]
 name = "pytorch"
